# SEAR-Bench

./: .gitignore  ALGORITHM.md  EXPERIMENTS.md  README.md  pyproject.toml  setup.py
scripts/: run_qwen14b_vllm.sh
src/seae/: __init__.py  backtest.py  benchmark.py  cli.py  data.py  evidence.py  experiments.py  factors.py  judge.py  llm_judge.py  synthetic.py
