[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sear-bench"
version = "0.1.0"
description = "Structured Evidence Agentic Reasoning benchmark for regime-aware factor validity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
]

[project.optional-dependencies]
hf = [
  "accelerate>=0.34",
  "torch>=2.3",
  "transformers>=4.51",
]

[project.scripts]
sear = "seae.cli:main"
seae = "seae.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
